--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     ports:
       - "8000:8000"
       - "8443:8443"
-      - "25565:25565" # Minecraft Lobby
-      - "25566:25566" # Minecraft Survival
+      - "25565:25565" # Velocity Proxy
     volumes:
       - crafty_config:/crafty/app/config
       - crafty_backups:/crafty/app/backups
